# uniplac-dev-web-fastapi

./: LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
uniplac-dev-web-fastapi/: main.py
uniplac-dev-web-fastapi/customer/: customer_controller.py  customer_test.rest
uniplac-dev-web-fastapi/database/: db_config.py
uniplac-dev-web-fastapi/employee/: employee_controller.py  employee_test.rest
