[tool.poetry]
name = "uniplac-dev-web-fastapi"
version = "0.1.0"
description = ""
authors = ["Lucas de Bona Sartor <lucas.bsartor@pagar.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.80.0"}
SQLAlchemy = "^1.4.40"
autopep8 = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
